shuffle button to radio buttons

--- a/res/layout-sw600dp/activity_photo.xml
+++ b/res/layout-sw600dp/activity_photo.xml
@@ -19,6 +19,7 @@
     <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                   android:layout_alignParentBottom="true"
                     android:layout_marginBottom="64dp"
+                    android:layout_marginLeft="48dp"
     >
     <Button android:id="@+id/btnPhotoStartSlideshow"
             android:layout_width="wrap_content"
@@ -50,13 +51,30 @@
             android:layout_toRightOf="@id/btnPhotoShare"
             android:padding="@dimen/photo_button_padding"
     />
-    <ToggleButton android:id="@+id/btnshuffleOn"
-                  android:layout_width="wrap_content" android:layout_height="wrap_content"
-                  android:textOn="Turn shuffle off"
-                  android:textOff="Turn shuffle on"
-
-                  android:layout_toRightOf="@id/btnSlideShowSpeed"
-                  android:padding="@dimen/photo_button_padding"
-    />
+        <RadioGroup
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/radioGroupShuffleSlideshow"
+                android:layout_below="@id/btnSlideShowSpeed"
+                android:layout_marginTop="24dp"
+                android:padding="@dimen/photo_button_padding"
+        >
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Play in order"
+                    android:id="@+id/rbShuffleOff"
+                    android:checked="true"
+                    android:textSize="@dimen/radioOptionsTextSize"
+            />
+            <RadioButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Play random order"
+                    android:id="@+id/rbShuffleOn"
+                    android:checked="false"
+                    android:textSize="@dimen/radioOptionsTextSize"
+            />
+        </RadioGroup>
     </RelativeLayout>
 </RelativeLayout>
