shuffle button to radio buttons

--- a/res/layout/activity_photo_grid.xml
+++ b/res/layout/activity_photo_grid.xml
@@ -1,16 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+              android:orientation="vertical"
                 android:layout_alignParentBottom="true"
 
 >
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/photo_grid_view"
               android:layout_width="match_parent"
-              android:layout_height="match_parent"
+
+              android:layout_height="0px"
+              android:layout_weight="1"
               android:numColumns="@integer/albumgrid_number_columns"
               android:stretchMode="columnWidth"
     >
     </GridView>
-</RelativeLayout>
+    <Button android:id="@+id/btnStartSlideshow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Slideshow"
+            android:onClick="btnStartSlideshowClicked"
+            android:layout_below="@id/photo_grid_view"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+    />
+</LinearLayout>
