--- a/res/layout/activity_slideshow.xml
+++ b/res/layout/activity_slideshow.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp" >
 
-    <android.support.v4.view.ViewPager
+    <asbridge.me.uk.MPhoto.Classes.PhotoViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/slideshowpager"
             android:layout_width="match_parent"
