--- a/res/layout/activity_checkable_photo_grid.xml
+++ b/res/layout/activity_checkable_photo_grid.xml
@@ -35,14 +35,24 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
     />
-    <Button android:id="@+id/btnSelectPhotos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Select Photos"
-            android:layout_toRightOf="@id/btnStartSlideshow"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:onClick="btnSelectPhotosClicked"
-    />
+        <Button android:id="@+id/btnSelectPhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select Photos"
+                android:layout_toRightOf="@id/btnStartSlideshow"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="btnSelectPhotosClicked"
+        />
+        />
+        <Button android:id="@+id/btnSharePhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Share"
+                android:layout_toRightOf="@id/btnSelectPhotos"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="btnSharePhotosClicked"
+        />
     </RelativeLayout>
 </LinearLayout>
