Removed unused photogridactivity and associated classes (replaced by checkablePhotoGridActivity)

--- a/res/layout-sw600dp/activity_photo.xml
+++ b/res/layout-sw600dp/activity_photo.xml
@@ -8,7 +8,7 @@
 
 
 
-    <asbridge.me.uk.MPhoto.Classes.PhotoViewPager
+    <asbridge.me.uk.MPhoto.Classes.SlideshowViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/photopager"
             android:layout_width="match_parent"
