--- a/res/layout/activity_photo.xml
+++ b/res/layout/activity_photo.xml
@@ -6,7 +6,7 @@
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp" >
 
-    <asbridge.me.uk.MPhoto.Classes.PhotoViewPager
+    <asbridge.me.uk.MPhoto.Classes.SlideshowViewPager
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/photopager"
             android:layout_width="match_parent"
