Multi select and CAB implemented in new activity and adapter. Only used on Bucket Fragment To refactor : No need to have checked logic in the adapter, or buttons in the activity

--- a/res/layout/activity_checkable_photo_grid.xml
+++ b/res/layout/activity_checkable_photo_grid.xml
@@ -49,10 +49,39 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Share"
-                android:layout_toRightOf="@id/btnSelectPhotos"
+                android:layout_below="@id/btnSelectPhotos"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
                 android:onClick="btnSharePhotosClicked"
+        />
+        <Button android:id="@+id/btnDeletePhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Delete"
+                android:layout_toRightOf="@id/btnSharePhotos"
+                android:layout_below="@id/btnSelectPhotos"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="btnDeletePhotosClicked"
+        />
+        <Button android:id="@+id/btnSelectAllPhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select All"
+                android:layout_below="@id/btnSharePhotos"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="btnSelectAllPhotosClicked"
+        />
+        <Button android:id="@+id/btnSelectNoPhotos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Select None"
+                android:layout_below="@id/btnSharePhotos"
+                android:layout_toRightOf="@id/btnSelectAllPhotos"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:onClick="btnSelectNoPhotosClicked"
         />
     </RelativeLayout>
 </LinearLayout>
