Moved play to action bar and removed play slideshow button

--- a/res/menu/photo_grid_context_menu.xml
+++ b/res/menu/photo_grid_context_menu.xml
@@ -4,7 +4,7 @@
           android:icon="@drawable/icon_share"
           android:title="share" />
     <item android:id="@+id/menu_delete"
-          android:icon="@drawable/delete_icon"
+          android:icon="@drawable/icon_delete"
           android:title="delete"
           android:showAsAction="ifRoom"/>
 </menu>
