--- a/res/layout/photo_grid_item.xml
+++ b/res/layout/photo_grid_item.xml
@@ -1,8 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#FF3333FF"
+
+>
     <asbridge.me.uk.MPhoto.Classes.SquareImageView
         xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/photo_grid_item_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:layout_margin="30dp"
     />
+</FrameLayout>
