Added PagerTabStrip to show page number

--- a/res/drawable/rounded_cell.xml
+++ b/res/drawable/rounded_cell.xml
@@ -3,8 +3,8 @@
 >
     <shape     android:shape="oval">>
         <gradient
-                android:startColor="@color/FireBrick"
-                android:endColor="@color/Thistle"
+                android:startColor="#FF45a9ce"
+                android:endColor="#FF3599be"
                 android:angle="45"
         />
 
