--- a/res/layout/activity_photosbydate.xml
+++ b/res/layout/activity_photosbydate.xml
@@ -96,6 +96,14 @@
             android:id="@+id/pagertabs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/tabindicators"
-    />
+            android:layout_below="@id/tabindicators">
+
+    <android.support.v4.view.PagerTabStrip
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:paddingBottom="10dp"
+            android:paddingTop="10dp"
+            android:textColor="#FF45a9ce" />
+    </android.support.v4.view.ViewPager>
 </RelativeLayout>
