--- a/res/layout/custom_control_page_indicator.xml
+++ b/res/layout/custom_control_page_indicator.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
-       android:layout_height="match_parent">
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content"
-            android:id="@+id/btn_page_indicator_0"
-            android:height="20dp"
-            android:width="20dp"
-            android:layout_centerVertical="true"
-            android:background="@drawable/rounded_cell" />
+       android:layout_height="match_parent"
+>
+
 </merge>
