--- a/res/drawable/rounded_cell.xml
+++ b/res/drawable/rounded_cell.xml
@@ -3,11 +3,11 @@
 >
     <shape     android:shape="oval">>
         <gradient
-                android:startColor="#FF45a9ce"
-                android:endColor="@color/DarkBlue"
+                android:startColor="@color/DarkBlue"
+                android:endColor="#FF45a9ce"
                 android:angle="45"
         />
 
-        <stroke android:color="@color/LightBlue" android:width="1dp" />
+        <stroke android:color="@color/LightBlue" android:width="2dp" />
     </shape>
 </inset>
