--- a/res/layout/activity_photosbydate.xml
+++ b/res/layout/activity_photosbydate.xml
@@ -42,7 +42,9 @@
                                                   android:layout_below="@id/tabbuttons"
                                                   android:layout_centerHorizontal="true"
                                                   android:padding="5dp"
-
+                                                  app:unselectedsize="30"
+                                                  app:selectedsize="42"
+                                                  app:margin="5"
     >
 
     </asbridge.me.uk.MPhoto.controls.PageIndicator>
